# cosmos-rust-wallet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: client.yml  js-helpers.yml  preferences.yml  release.yaml  types.yml  wallet.yml
examples/browser/: README.md  bootstrap.js  index.html  index.js  package.json  webpack.config.js
modules/js-helpers/: Cargo.toml  README.md
modules/js-helpers/src/: lib.rs  signer.rs
modules/signer/: Cargo.toml
modules/signer/src/: signer.rs
src/: error.rs  lib.rs  msg.rs  proto_gen.rs  rpc.rs  signer.rs  wallet.rs
