[workspace]
members = ["packages/*", "modules/*"]

[profile.release.package.types]
codegen-units = 1
incremental = false

[profile.release.package.wallet]
codegen-units = 1
incremental = false

[profile.release.package.rpc]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[patch.crates-io]
cosmos-sdk-proto = { git = "https://github.com/forbole/cosmos-rust", branch = "main"}
# tonic = { git = "https://github.com/bragaz/tonic", rev = "d9e43d4" }
# h2 = { git = "https://github.com/boxdot/h2", branch = "tonic-ws-transport" }
