[workspace]
members = ["packages/*"]

[profile.release.package.crw-wallet]
codegen-units = 1
incremental = false

[profile.release.package.crw-client]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[patch.crates-io]
cosmos-sdk-proto = { git = "https://github.com/shravanshetty1/cosmos-rust", branch = "wasm2"}
