[package]
name = "js-helpers"
version = "0.1.0"
authors = ["bragaz <leo.braga95@gmail.com"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/forbole/cosmos-key-signer"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmos-sdk-proto = { version = "0.3.0"}
prost-types = {version = "0.7"}
rpc = {path = "../../packages/rpc", version = "0.1.0"}
types = {path = "../../packages/types", version = "0.1.0"}
wallet = {path = "../../packages/wallet", version = "0.1.0"}
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"]}
wasm-bindgen-futures = { version = "0.4.21"}

[dev-dependencies]
wasm-bindgen-test = "0.3.21"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true